# Game-Engine-CPP

./: .gitignore  CMakeLists.txt  README.md  build_sdl3.sh  dockrun.bat  dockrun.sh  install.sh  msysrun.sh
debugger/: debugger_manual.md  gdb_enhanced_debugger.sh
docker/: .dockerignore  CMakeLists.txt  Dockerfile  build.sh  docker-compose.yml  run_with_xvfb.sh  setup_sdl3.sh
docker/cmake/: FindSDL3.cmake
include/: header.h
src/: main.cpp
src/class/: MyClass.cpp  MyClass.h
tests/: my_test.cpp  sdl_test.h
tools/: compare_hash.sh  compiler_integrity.h  copy_sdl_dlls.sh  datafile_integrity.h  get_sdl3.sh  new.hash  origin.hash
